--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,4 @@
+@import 'color.less';
 @import 'transition/index.less';
 @import 'var/index.less';
 @import 'public.less';
@@ -6,7 +7,8 @@
 @import './entry.css';
 
 input:-webkit-autofill {
-  box-shadow: 0 0 0 1000px white inset !important;
+  box-shadow: 0 0 0 1000px transparent inset;
+  -webkit-text-fill-color: @text-color-base;
 }
 
 :-webkit-autofill {
